@@ -520,6 +520,12 @@ class SvnRepository(ForeignRepository):
             self.transport.add_connection(conn)
         return editor.delta
 
+    def _annotate(self, path, revnum, fileid, revid, mapping):
+        from bzrlib.plugins.svn.annotate import Annotater
+        annotater = Annotater(self, mapping, fileid, revid)
+        annotater.check_file_revs(path, revnum)
+        return annotater.get_annotated()
+
     def set_layout(self, layout):
         """Set the layout that should be used by default by this instance."""
         self.get_mapping().check_layout(self, layout)
